Introduce dictionarization of pages columns